configs/host/iptables
# Generated by iptables-save v1.8.7 on Tue Dec 10 19:06:04 2024
*filter
:INPUT ACCEPT [1178:357277]
:FORWARD ACCEPT [258:27721]
:OUTPUT ACCEPT [1171:92722]
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A FORWARD -i eth0 -o to-rome -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o or-paris -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i to-rome -o eth0 -j ACCEPT
-A FORWARD -i or-paris -o eth0 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
COMMIT
# Completed on Tue Dec 10 19:06:04 2024
# Generated by iptables-save v1.8.7 on Tue Dec 10 19:06:04 2024
*nat
:PREROUTING ACCEPT [133:13026]
:INPUT ACCEPT [27:5341]
:OUTPUT ACCEPT [1921:134458]
:POSTROUTING ACCEPT [988:56357]
-A PREROUTING -i to-rome -p udp -m udp --dport 9080 -j DNAT --to-destination 172.30.106.242:9080
-A PREROUTING -i or-paris -p udp -m udp --dport 9080 -j DNAT --to-destination 172.30.106.242:9080
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Dec 10 19:06:04 2024
# Warning: iptables-legacy tables present, use iptables-legacy-save to see them
